# parser_template_generator

./: .gitignore  .project_env  CMakeBuildOpts.txt  Makefile  README.md  TODO.md  alloc.c  alloc.h  ast.c  ast.h  common.h  errors.h  lists.c  lists.h  main.c  notes.txt  nterm_list.c  nterm_list.h  parser.y  ptrlist.c  ptrlist.h  render.c  scanner.l  strbuf.c  strbuf.h  strlist.c  strlist.h  term_list.c  term_list.h  tokens.c  tokens.h  toy.grammar  trace.c  trace.h
src/: CMakeLists.txt  ast.h  lists.c  lists.h  main.c  nterm_list.c  nterm_list.h  parser.y  ptrlist.c  render.c  render.h  render_ast_header.c  render_ast_header.h  render_ast_source.c  render_ast_source.h  render_init.c  render_init.h  scanner.l  strbuf.c  strbuf.h  strg_list.c  strg_list.h  strlist.c  strlist.h  template.l  term_list.c  term_list.h  tokens.c  tokens.h
src/common/: CMakeLists.txt  cmdline.c  cmdline.h  common.h  fileio.c  hash.c  ptr_list.c  ptr_list.h  strg_list.c  strg_list.h  strgs.c  strgs.h  trace.c
src/generate/: CMakeLists.txt  generate.c  generate.h
src/lists/: CMakeLists.txt  lists.c  lists.h  nterm_comment.c  nterm_comment.h  nterm_ds.c  nterm_ds.h  nterm_list.c  nterm_list.h  nterm_rules.c  nterm_rules.h  term_list.c  term_list.h
src/main/: CMakeLists.txt  gurge.c  main.c  print_rule.c
src/parser/: CMakeLists.txt  ast.c  ast.h  parser.y  scanner.l  tokens.c  tokens.h
src/render/: CMakeLists.txt  render.c  render.h  render_ast_header.c  render_ast_header.h  render_ast_source.c  render_ast_source.h  render_init.c  render_init.h  render_parser.c  render_parser.h  render_parser_header.c  (+6 more)
(+51 files in other folders)
